Commented sherlock() to explain variable scope

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="center">
 
     <h1>JS Playground!</h1>
-    <p>Note: Many of these happen in the console log</p>
+    <p>Note: Check the console log :)</p>
 
 
     <button type="button" class="btn btn-primary" onclick="beerOnTheWall()">Beer On The Wall</button>
