Added/Customized phraseOMatic()

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <p>Note: Check the console log :)</p>
 
 
-    <button type="button" class="btn btn-primary" onclick="beerOnTheWall()">Beer On The Wall</button>
+    <button type="button" class="btn btn-primary" onclick="beerOnTheWall()">Beer On The Wall</button><br><br>
     <button type="button" class="btn btn-primary" onclick="thingAMaJig()">Thing-A-Ma-Jig</button>
-    <button type="button" class="btn btn-primary" onclick="sherlock()">Sherlock</button>
-    <!-- <button type="button" class="btn btn-primary" onclick="runCode()">Start</button> -->
+    <button type="button" class="btn btn-primary" onclick="sherlock()">Sherlock</button><br><br>
+    <button type="button" class="btn btn-primary" onclick="phraseOMatic()">Phrase-O-Matic</button>
   </div>
 
   <footer class="footer">
@@ -46,6 +46,7 @@
   <script src="beerOnTheWall.js"></script>
   <script src="thingAMaJig.js"></script>
   <script src="sherlock.js"></script>
+  <script src="phraseOMatic.js"></script>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
